added review functionality

--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,3 @@
 .material-icons.red { color: #ef080b; }
 .material-icons.green { color: #66ca0e ; }
+.material-icons.add-review  { cursor: pointer }
