--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,28 @@
 .material-icons.red { color: #ef080b; }
 .material-icons.green { color: #66ca0e ; }
-.material-icons.add-review  { cursor: pointer }
+.material-icons.add-review  { cursor: pointer; }
+.main-nav-pink {background-color: #ffe4e1;}
+    
+    .blue-button{ color: #fff;
+    background-color: #82CAFF;
+    border-color: #C6DEFF;
+    }
+
+    .blue-button:hover {
+        background-color: #C6DEFF;
+    }
+
+    .blue-button-outline{
+    color: #C6DEFF;
+    background-color: #ffffff;
+    background-image: none;
+    border-color: #C6DEFF;
+    }
+
+    .blue-button-outline:hover {
+        color: #fff;
+        background-color: #82CAFF;
+        border-color: #82CAFF;
+    }
+
+    
