fixed address logic and added thumbs up and thumbs down click colors

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 .material-icons.red { color: #ef080b; }
 .material-icons.green { color: #66ca0e ; }
+.material-icons.grey { color: #eeeeee ; }
 .material-icons.add-review  { cursor: pointer; }
 .main-nav-pink {background-color: #ffe4e1;}
     
