aesthetic changes and removed the auto filter upon login for now as it isn't working

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,10 +1,16 @@
 $primary: #82CAFF;
+$primary-lighter: #C6DEFF;
 $secondary: #4FA6E0;
 $secondary-darker: #3b98d5;
 $secondary-lighter: #7CC0EF;
-$success: #1DBC73;
+$success: #66ca0e;
 $success-darker: #19a866;
-$danger: #FC5A5E;
+$danger: #ef080b;
 $danger-darker: #e15256;
 $info: #E1E7ED;
+$info-darker: #dee2e6;
 $gray: #929292;
+$light-pink: #ffe4e1;
+$medium-pink: #FFBBBB;
+$medium-dark-pink: #FF8CA2;
+$dark-pink: #ed5675;
