--- a/src/App.scss
+++ b/src/App.scss
@@ -4,27 +4,55 @@
 @import '~bootstrap/scss/bootstrap';
 @import './scss/index';
 
-.material-icons.red { color: #ef080b; }
-.material-icons.green { color: #66ca0e ; }
-.material-icons.grey { color: #eeeeee ; }
-.material-icons.add-review  { cursor: pointer; }
-.main-nav-pink {background-color: #ffe4e1;}
+.material-icons.red { 
+    color: $danger; }
+.material-icons.green { 
+    color: $success; }
+.material-icons.grey { 
+    color: $info; }
+.material-icons.add-review  
+{ cursor: pointer; 
+    &:hover{
+        color: $gray-400; 
+    }
+}
+
+.main-nav-pink {
+    background-color: $light-pink;
+    & li.nav-item { 
+        & :hover{
+        background-color: $medium-pink;
+    }}
+}
 .dropdown {list-style:none;}
     
-    .blue-button {
-    background-color: #82CAFF!important;
+.login-button {
+    background-color: $primary!important;
     border: none!important;
     color: #fff!important;
+    &:hover{
+        background-color: $secondary!important;
+    }
     }
 
-    .blue-button:hover {
-        background-color: #C6DEFF!important;
+.filterNav li.nav-item{
+   
+    & a, a:visited {
+        color:$black;
     }
-    .black-link a, a:visited{
-        color:#000;
-        text-decoration: underline;
-    }
-    .black-link a:hover{
-        color:#82CAFF;
-        text-decoration: underline;
+    & a:hover{
+        background-color: $gray-200;
+        
+    } 
+
+}
+.black-link a{
+    text-decoration: underline;
+    color:$black;
+    &:visited{
+        color:$black;
+        }
+    &:hover{
+            color:$secondary;
+        }
     }
